Started coding DES, added new class called TripleDES

--- a/Kerberos/.gitignore
+++ b/Kerberos/.gitignore
@@ -1,6 +1,1 @@
-/AuthenticationServer.class
-/Client.class
-/KerberosSystem.class
-/Main.class
-/Server.class
-/TicketGrantingServer.class
+/TripleDES$processingType.class
